<resources>
    <string name="_current_language">default</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absolute_humidity_temperature_sensor">Absolute Humidity at Temperature: </string>
    <string name="ac">AC</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_description">The secondary color</string>
    <string name="account">Account</string>
    <string name="account_pwd_not_match">Account and password do not match</string>
    <string name="accurate">Accurate</string>
    <string name="action_clean">Clean</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_manager">Manager</string>
    <string name="action_open">Open</string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="activated_pro_but_unknown_source">* According to the historical order records of this machine, the Pro version has been activated for you, but the order number has not been found. If you have previously paid to activate the Pro version through Huawei Pay, it is recommended that you download the DevInfo App from the Huawei App Store, bind the order record to the DevInfo App Account, and then download the DevInfo App from any channel You can synchronize the Pro version by logging in to your account. \nIf you have any questions, please contact us: support@liuzhosoft.com</string>
    <string name="activated_pro_but_unknown_source_hw">* According to the historical order records of this machine, the Pro version has been activated for you, but the order number has not been found. If you have previously paid for the Pro version through Huawei Pay, it is recommended that you click the Restore Purchase button to query and bind the order record to the DevInfo App Account. You can then download the DevInfo App from any channel. Synchronize the Pro version by logging in to your account. \nIf you have any questions, please contact us: support@liuzhosoft.com</string>
    <string name="active_pro_for_noads_summary">Purchase %s to permanently remove in-app ads and unlock additional premium features.</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="adaptive">Adaptive</string>
    <string name="adb_debug">USB debugging</string>
    <string name="add_tab">Add page</string>
    <string name="admob_app_id">ca-app-pub-3724073793374078~2737981818</string>
    <string name="admob_appopen_splash">ca-app-pub-3724073793374078/1445546321</string>
    <string name="admob_banner_appinfo">ca-app-pub-3724073793374078/8157028099</string>
    <string name="admob_banner_backup">ca-app-pub-3724073793374078/3391334847</string>
    <string name="admob_banner_collapsible_appinfo">ca-app-pub-3724073793374078/1087860930</string>
    <string name="admob_banner_collapsible_satellite">ca-app-pub-3724073793374078/2317081036</string>
    <string name="admob_banner_dashboard">ca-app-pub-3724073793374078/3426993860</string>
    <string name="admob_banner_settings">ca-app-pub-3724073793374078/7125747486</string>
    <string name="admob_insert_backup">ca-app-pub-3724073793374078/2216071740</string>
    <string name="admob_insert_boost">ca-app-pub-3724073793374078/9357777081</string>
    <string name="admob_insert_file_analyzer">ca-app-pub-3724073793374078/6696737266</string>
    <string name="admob_insert_splash">ca-app-pub-3724073793374078/7415593426</string>
    <string name="admob_insert_splash2">ca-app-pub-3724073793374078/1684293167</string>
    <string name="admob_native_app_ana">ca-app-pub-3724073793374078/5993896899</string>
    <string name="admob_native_backup">ca-app-pub-3724073793374078/8053746384</string>
    <string name="admob_native_boost">ca-app-pub-3724073793374078/4564615402</string>
    <string name="admob_native_dashboard">ca-app-pub-3724073793374078/4147388482</string>
    <string name="admob_native_new_app">ca-app-pub-3724073793374078/3315396387</string>
    <string name="admob_native_sensor_detail">ca-app-pub-3724073793374078/4044755550</string>
    <string name="admob_native_storage_ana">ca-app-pub-3724073793374078/8025163869</string>
    <string name="admob_native_tests">ca-app-pub-3724073793374078/2763793709</string>
    <string name="admob_test_appopen">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_test_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_banner_collapsible">ca-app-pub-3940256099942544/2014213617</string>
    <string name="admob_test_insert">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_test_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00B43FD49D7C68F5F7194473F4780BC0DE7A43825CC0EAA48C48CF0EC7ACD25D7685C6255D3D80A54A39D0DBF9D9E8C5EF3F8D1421F01AEB2119F713F8F74C90CD9F92EFA0C40B135BCD4ECA4F41A57A08</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">00EE7B1A4D153053374DF6375554FF78A7A76DDF6CCE42B90F98EDB4F39CA6A9A1445B34058E297C61318E1C75B964B11691E14FFB6CE9D80D4179E2C7AAA5AF68AD4C553EFCA8C04C67BA47F7CBCE76D3FEC736956947C5FF97A58D32D5C637A6</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00D2939E2B1745CB08A39846A99D42A0AD05759E6E0F91BECD4D8A53259C077F18B6AB156A77AE3D4EAC57CC5F3F76A701F826AB8AFC0F85F571D5B9D4C749AEBECA6EA1B616D58191A19191B09D5434F4CED459A5B99278091AE96B113CE62FC4</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00DB160C219ADE7156F99E9E74683DFEB3BED90E57640E4D60472D58E2702C6A633AB6E4C402F8DCAC066D654BA0EBD386</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">459508E6F0A37A564605F889582A89FE</string>
    <string name="altitude">Altitude</string>
    <string name="android_device_id">Android Device ID</string>
    <string name="api_level">API Level</string>
    <string name="baseband">Baseband</string>
    <string name="bearing">Bearing</string>
    <string name="bearing_accurate">Bearing accurate</string>
    <string name="bluetooth_mac_address">Bluetooth MAC address</string>
    <string name="boot_loader">Boot Loader</string>
    <string name="brightness_mode">Brightness mode</string>
    <string name="build_fingerprint">Build fingerprint</string>
    <string name="build_id">Build ID</string>
    <string name="build_number">Build number</string>
    <string name="build_time">Build Time</string>
    <string name="current_frequency">Current frequency</string>
    <string name="default_screen_orientation">Default orientation</string>
    <string name="device_type">Device type</string>
    <string name="dynamic_partitions">Dynamic partitions</string>
    <string name="fa_select_all">Select All</string>
    <string name="fa_select_all_off">Select None</string>
    <string name="fa_select_keep_longest_path">Keep the longest path</string>
    <string name="fa_select_keep_newest">Keep the newest</string>
    <string name="fa_select_keep_oldest">Keep the oldest</string>
    <string name="fa_select_keep_shortest_path">Keep the shortest path</string>
    <string name="fa_select_keep_smart">Smart keep</string>
    <string name="frequency">Frequency</string>
    <string name="gad_id">Google Advertising ID</string>
    <string name="gpu_renderer">GPU renderer</string>
    <string name="gpu_vendor">GPU vendor</string>
    <string name="gsf_id">Google Services Framework ID</string>
    <string name="h_v_acc_factor">E H/V DOP</string>
    <string name="h_v_accurate">H/V Accurate</string>
    <string name="hardware_serial">Hardware serial</string>
    <string name="hdr">HDR</string>
    <string name="imei">IMEI</string>
    <string name="java_runtime">Java Runtime</string>
    <string name="java_vm">Java VM</string>
    <string name="jvm_stack_size">Java VM stack size</string>
    <string name="kernel_arch">Kernel architecture</string>
    <string name="kernel_version">Kernel version</string>
    <string name="language">Language</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="name">Name</string>
    <string name="network_operator">Network operator</string>
    <string name="network_type">Network Type</string>
    <string name="open_gl">OpenGL ES</string>
    <string name="opengl_extensions">OpenGL extensions</string>
    <string name="openssl_version">OpenSSL Version</string>
    <string name="panel_id">Panel id</string>
    <string name="pdop">PDOP</string>
    <string name="project_treble">Project Treble</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="root_access">Root access</string>
    <string name="satellite_count">Number of satellites</string>
    <string name="screen_physical_size">Physical size</string>
    <string name="screen_size">Screen size</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_total_height">Screen height</string>
    <string name="screen_total_width">Screen width</string>
    <string name="se_linux">SELinux</string>
    <string name="sea_level_height">Sea level altitude</string>
    <string name="seamless_updates">Seamless updates</string>
    <string name="security_patch_level">Security patch level</string>
    <string name="sim_serial">SIM serial</string>
    <string name="sim_subscriber">SIM subscriber</string>
    <string name="speed">Speed</string>
    <string name="speed_accurate">Speed accurate</string>
    <string name="system_as_root">System-as-Root</string>
    <string name="system_uptime">System uptime</string>
    <string name="time_zone">Time zone</string>
    <string name="ttff">Time to first fix (TTFF)</string>
    <string name="version_name">Version name</string>
    <string name="view">View</string>
    <string name="vulkan">Vulkan</string>
    <string name="wifi_mac_address">WiFi MAC address</string>
</resources>